Course Controller and JSP integration for making interaction